# persistency_criteria_for_multicut_clustering_on_GPUs

./: CMakeLists.txt  PersistencyCriteriaSolver.cu  PersistencyCriteriaSolver.h  README.md  dCOO.cu  dCOO.h  device_vector_initialiser.cu  device_vector_initialiser.h  input_reader.cu  input_reader.h  main.cu  rama_utils.h  settings.json  time_measure_util.h
